@@ -38,6 +38,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - bug #2816840 [priv] Cannot change a user's details 
 - bug #2816165 [display] Executed query not always displayed
 - bug #2819944 [setup] Incorrect mention of designer_coords
+- bug #2821757 [insert] "Insert another new row" no longer worked 
 
 3.2.0.1 (2009-06-30)
 - [security] XSS: Insufficient output sanitizing in bookmarks 
